added pw and 1st api test

--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Управление фильмами</title>
+    <title>Кинопоиск на коленке</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Управление фильмами</h1>
+    <h1>Кинопоиск на коленке</h1>
 
     <form id="movieForm" aria-label="Форма добавления фильма">
         <label for="movieTitle">Название фильма:</label>
