--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,9 @@
         <label for="movieDescription">Описание:</label>
         <textarea id="movieDescription" name="movieDescription" required aria-label="Описание фильма"></textarea>
 
+        <label for="movieRating">Рейтинг (от 1 до 10):</label>
+        <input type="number" id="movieRating" name="movieRating" min="1" max="10" aria-label="Рейтинг фильма">
+
         <button type="submit" aria-label="Добавить фильм">Добавить фильм</button>
     </form>
 
