try to fix required

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
     <h2>Список фильмов</h2>
     <ul id="movieList" aria-label="Список фильмов"></ul>
 
-    <script src="script.js" defer></script>
+
+    <script type="module" src="script.js" defer></script>
 </body>
 </html>
