--- a/public/trash.html
+++ b/public/trash.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Корзина - Каталог фильмов</title>
+    <title>Trash - Movie Catalog</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
         <header>
-            <h1>Корзина</h1>
+            <h1>Trash</h1>
             <nav class="navigation">
-                <a href="/" class="nav-link">← Вернуться к каталогу</a>
+                <a href="/" class="nav-link">← Return to Catalog</a>
+                <div class="language-switcher">
+                    <button onclick="switchLanguage('ru')" class="lang-btn" data-lang="ru">RU</button>
+                    <button onclick="switchLanguage('en')" class="lang-btn" data-lang="en">EN</button>
+                </div>
             </nav>
         </header>
 
